<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fix_password_tip_text"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/id"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/fix_password_id_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fix_password_id_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/tel"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/fix_password_tel_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fix_password_tel_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/password"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/fix_password_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fix_password_pwd_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/password"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/fix_password_pwd_confirm_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:hint="@string/fix_password_pwd_cn_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/fix_password_confirm_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:text="@string/fix_password_confirm_bt_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/fix_password_cancel_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_forgetpwd_bt_bg"
        android:text="@string/fix_password_cancel_bt_text"
        android:textSize="25sp" />


</LinearLayout>