<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingStart="30dp"
    android:paddingRight="30dp"
    android:paddingEnd="30dp"
    android:paddingBottom="30dp"
    android:background="@color/main_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1.4">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_launcher"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/tel"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:inputType="text"
            android:hint="@string/login_username_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/password"
            android:scaleType="fitCenter" />

        <com.bestcode95.staffmanager.utils.MyEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:background="@null"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="-10dp"
        android:id="@+id/login_login_bt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/button_bg"
        android:text="@string/login_login_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/login_forgetpwd_bt"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/login_forgetpwd_bt_bg"
        android:text="@string/login_forget_password_text"
        android:textSize="25sp" />


</LinearLayout>